<resources>
    <string name="app_name">Gatyatmak Jyotish</string>
    <string name="app_name_header">Gatyatmak Jyotish Your Guide To The Future</string>
    <string name="lorem_ipsum">You are a sensitive and emotional person. The hard knocks of this world have more effects on you than they have on most other people, and you lose some of the enjoyment of life in consequence. What other people say and think of you is taken by you to heart. Thus, there are a certain number of things which cause you unhappiness which, after all, are not worth troubling about.Your manner is quiet, as a rule, and this quality gives you the appearance of being strong and determined in the eyes of your fellow-men and women. It enables you to get your own way when you want it.You do not say as much as you think and while you are thinking, you are reasoning. It follows that your judgement is worth having and people will flock to you for advice.You have several excellent qualities. You are highly sympathetic, which makes you a good friend. You are loyal and patriotic and are thus a first class citizen. You are, or would be a most lovable parent. You are, or would be, everything that your partner could desire. Clearly, the good qualities of yours far outweigh the others.</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="sign_up_activity_title">Sign Up</string>
    <string name="forgot">please enter your email to  search for your account.</string>
    <string name="find">Write Your Email</string>
    <string name="notification">Notification </string>
    <string name="changefontsize">Change Font Size</string>
    <string name="fontsize">Font Size</string>
    <string name="usedevicefontsize">Use device font size</string>
    <string name="tiny">Tiny</string>
    <string name="Medium">Medium</string>
    <string name="Large">Large</string>
    <string name="ExtraLarge">Extra Large</string>
    <string name="Huge">Huge</string>
    <string name="points">With downloading this app, user will get 50 gatyatmak points.You will get 20-20 gatyatmak points sharing this app with your contacts. After sharing by you and downloading by a user, you will get 50 more gatyatmak points. You will get 100 gatyatmak points too by rating this app. One point will be equal to one Indian rupee. You will use these points in purchasing our books and availing our services upto 25% to 50%.</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="interest">Interested in trying one? Use the form below to get in touch.</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="tob">Time of Birth</string>
    <string name="pob">Place of Birth</string>
    <string name="pob_district">Place of Birth/District</string>
    <string name="address">Address</string>
    <string name="location">Current Location</string>
    <string name="number">Mobile Number</string>
    <string name="cpassword">Confirm Password </string>
    <string name="promocode">Enter Promocode (OPTIONAL)</string>
    <string name="settings">Settings</string>
    <string name="changepassword">Change Password</string>
    <string name="changetheme">Change Theme</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="retypenewpassword">Re-type New Password </string>
    <string name="save">Save</string>
    <string name="email">Email Address</string>
    <string name="login">Login</string>
    <string name="signup">No account?Register here</string>
    <string name="year">Yearly forecast</string>
    <string name="date">Daily forecast</string>
    <string name="UsersProfile">Users Profile </string>
    <string name="changelanguage">Change Language </string>
    <string name="Earnpoints">Earn Points</string>
    <string name="OtherServices">Other Services</string>
    <string name="PaymentDetails">Payment Details</string>
    <string name="Blog">Blog</string>
    <string name="Contactus">Contact us</string>
    <string name="aboutus">About us</string>
    <string name="rateUs">Rate us</string>
    <string name="logout">Logout</string>
    <string name="thanksmessage">Thankyou for Login</string>
    <string name="services">Services</string>
    <string name="RidhiManchanda">Hi, Ridhi Manchanda</string>
    <string name="horoscopemaking">Horoscope Making</string>
    <string name="horoscopematching">Horoscope Matching</string>
    <string name="consultation">Consultation</string>
    <string name="otherservices">Other Services </string>
    <string name="cart">Cart</string>
    <string name="horoscope_matching">Horoscope Matching Details</string>
    <string name="blog1">Blog1 </string>
    <string name="blog2">Blog2</string>
    <string name="blog3">Blog3 </string>
    <string name="blog4">Blog4 </string>
    <string name="OK">OK</string>
    <string name="REDEEMPOINT">REDEEM POINT</string>
    <string name="Done">Done</string>
    <string name="team">Our Team</string>
    <string name="shareApp">Share</string>
    <string-array name="subscription">
        <item>Daily Forcast - You will continually be shown your forecast for 3 days without any fee . In case If you wish to see your daily forecast for whole year at a time, you\'ll have to pay for our annual subscription for daily forecast \u20B9 400 Subscribe For Daily</item>
        <item>You can get offers up to 50% of the value on the basis of Gatyatmak points in your account. Get Gatyatmak Points .</item>

        <item>Yearly Forecast - Every time, You will be able to see your 3 forecasts for every aspects of your life, health, weaalth, career etc. In case If you wish to see about all matters for whole year at a time, you\'ll have to pay for our annual subscription for annual forecast \u20B9 400 Subscribe For Yearly</item>

        <item>You can get offers up to 50% of the value on the basis of Gatyatmak points in your account. Get Gatyatmak Points.</item>


    </string-array>
    <string name="pointsforliving">10 key points</string>
    <string name="our_mission">Our mission</string>
    <string name="socialmenu">Follow these pages</string>
    <string name="title_book1">Book-Falit Jyothish:Kitna sach Kitna Jhooth</string>
    <string name="title_book2">Book-Gatyakmak Jyothish:Grahon ka Prabhaw</string>
    <string name="title_service1">Gatyatmak Horoscope</string>
    <string name="title_service2">Horoscope Matching</string>
    <string name="title_service3">Jyothish Prediction</string>
    <string name="title_service4">Astrology Remedies</string>
    <string name="title_service5">Hindi Astrology eBooks - Falit Jyotish : Kitna Sach Kitna Jhuth</string>
    <string name="title_service6">Hindi Astrology eBooks - Gatyatmak Dasha Paddhati : Grahon Ka Prabhav</string>
    <string name="title_service7">Hindi Astrology eBooks - Gatyatmak Jharokhe se jyotish</string>
    <string name="proceed">Proceed</string>
    <string name="purchasenow">SERVICE AVAILABLE</string>
    <string name="paynow">PAY NOW</string>
    <string name="edit">EDIT</string>
    <string name="your">Your Cart is empty!Add items to it now</string>
    <string name="Rate">Rate this app</string>
    <string name="share">Share this Application</string>
    <string name="refer">Refer and Earn</string>
    <string name="horoscope">Horoscope</string>
    <string name="dailyforecast">Daily forecast</string>
    <string name="yearlyforecast">Yearly forecast</string>
    <string name="consulation">Consulation</string>
    <string name="phone">phone</string>
    <string name="payment">SELECT A PAYMENT METHOD</string>
    <string name="health"> dropdown1E - health, personality</string>
    <string name="wealth">dropdown2E - wealth, family, credit</string>
    <string name="brother">dropdown3E - brother-sister, collegue</string>
    <string name="mother">dropdown4E - mother, belongings</string>
    <string name="education">dropdown5E - education, progeny</string>
    <string name="illness">dropdown6E - illness-loan-enemy</string>
    <string name="love">dropdown7E - love, domestic-matters</string>
    <string name="routine">dropdown8E - routine,  life-style</string>
    <string name="luck">dropdown9E - luck, religious-activity</string>
    <string name="father">dropdown10E - father,career, society</string>
    <string name="profit">dropdown11E - profit, goal, aimbition</string>
    <string name="expense">dropdown12E - expense, foreign-trip</string>
    <string name="points_to_know_heading">Gatyatmak Jyotish has introduced 10 points to adjust with the power of time.</string>
    <string name="useofapp">Use of App</string>
    <string name="done">Done</string>
    <string name="marketing">Be partner in marketing of this app</string>
    <string name="app">With downloading this app, user will get 50 gatyatmak points. You will get 20-20 gatyatmak points sharing this app with your contacts. After sharing by you and downloading by a user, you will get 50 more gatyatmak points. You will get 100 gatyatmak points too by rating this app. One point will be equal to one Indian rupee. You will use these points in purchasing our books and availing our services upto 25% to 50%</string>
    <string name="hello_blank_fragment">error is here</string>
    <string name="remedy">Remedy</string>
    <string name="publish">Publications </string>
    <string name="titlelocationpermission">title_location_permission</string>
    <string name="textlocationpermission">text_location_permission</string>
    <string name="astro">1. Hindi Astrology Books – Our hindi Books based on Gatyatmak Jyotish research written by Mr. Vidya Sagar Mahtha and Mrs. Sangita Puri is available at very reasonable price.</string>
    <string name="astro1">2. Hindi Astrology eBooks – Our Hindi eBooks based on Gatyatmak Jyotish research written by Mr. Vidya Sagar Mahtha and Mrs. Sangita Puri is available at very reasonable prices.</string>
    <string name="pubb1"><![CDATA[(a).<b>Falit Jyotish: Kitna Sach Kitna Jhuth</b> - The book is written by  <b>Mr. Vidya Sagar Mahtha</b>, the father of ‘Gatyatmak Jyotish’. In this book, he has expressed deep concer over superstitions and illusions in Indian astrology and also suggested the ways for eradication of such practices. \u20B9 400/-]]></string>
    <string name="pubb2"><![CDATA[(b).<b>Gatyatmak Dasha Paddhati: Grahon Ka Prabhav</b> – Written by Mrs. Sangita Puri, this book details the research and foundation ofGatyatmakJyotish, through which accurate predictions are possible. \u20B9 400/-  ]]>    </string>
    <string name="service_title"> You can get your Horoscope in English by providing us your date, time and place of birth. Mr. VidyaSagarMahtha, the father of ‘GatyatmakJyotish’, has formulated calculations which have made it possible to sketch authentic life-graphs showing ups/downs and negative/positive circumstances of any individual’s life. Through software-generated life-graphs with proper descriptions, we are able to provide our predictions with high level of accuracy. \u20B9 800/-</string>
    <string name="service1">1. Gatyatmak Horoscope – You can get your Horoscope in English by providing us your date, time and place of birth. Mr. VidyaSagarMahtha, the father of ‘GatyatmakJyotish’, has formulated calculations which have made it possible to sketch authentic life-graphs showing ups/downs and negative/positive circumstances of any individual’s life. Through software-generated life-graphs with proper descriptions, we are able to provide our predictions with high level of accuracy. \u20B9 800</string>
    <string name="ok">OK</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="resetPassword">Reset Password</string>
    <string name="enterOTP">Enter the OTP provided in the email</string>
    <string name="getOTP">Get OTP</string>
</resources>